--- a/src/components/button/style/index.less
+++ b/src/components/button/style/index.less
@@ -1,5 +1,5 @@
-@import "../../../assets/style/themes/default";
-@import "../../../assets/style/mixins/index";
+@import "../../style/themes/default";
+@import "../../style/mixins/index";
 @import "./mixin";
 @btn-prefix-cls: ~"@{ant-prefix}-btn";
 // for compatibile
